# baratron

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  sonar-project.properties
.github/workflows/: python-package.yml
baratron/: __init__.py  driver.py
baratron/tests/: test_driver.py
